# Crew-AI-Weakness-Agent

./: .gitignore  FEW_SHOT_LEARNING.md  README.md  pyproject.toml  render.yaml  requirements.txt
src/: __init__.py  api.py  crew.py  main.py  models.py
src/config/: agents.yaml  tasks.yaml
src/tools/: custom_tool.py
