[project]
name = "board_panel"
version = "1.0.0"
description = "AI-Powered Startup Advisory Board using CrewAI - 5 specialized agents analyzing startups"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.0",
    "groq"
]

[project.scripts]
board_panel = "src.main:run_example"
board_api = "src.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"
